// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should display icon with a different name 1`] = `
.c0 {
  display: inline-block;
}

<svg
  aria-hidden="true"
  class="c0"
  focusable="false"
  height="20"
  role="img"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g>
    <path
      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
      data-testid="icon-svg-path"
      fill="hsl(0,100%,100%)"
      fill-rule="evenodd"
    />
  </g>
</svg>
`;

exports[`<Icon /> should render multipath icon 1`] = `
.c0 {
  display: inline-block;
}

<svg
  aria-hidden="true"
  class="c0"
  focusable="false"
  height="20"
  role="img"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g>
    <defs>
      <path
        d="M351.5 41.7a21.3 21.3 0 0 1-17.4 39A192 192 0 1 0 448 256v-19.6a21.3 21.3 0 0 1 42.7 0v19.6A234.7 234.7 0 1 1 351.5 41.7zm133 28.7a21.3 21.3 0 0 1 0 30.1L271 314.1a21.3 21.3 0 0 1-30.2 0l-64-64a21.3 21.3 0 1 1 30.2-30.2l48.9 49L454.2 70.3a21.3 21.3 0 0 1 30.2 0z"
        id="circle"
      />
    </defs>
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <mask
        fill="#fff"
        fill-opacity="0"
        id="check"
      >
        <use
          xlink:href="#circle"
        />
      </mask>
      <use
        fill="hsl(0,100%,100%)"
        fill-rule="nonzero"
        xlink:href="#circle"
      />
      <g
        fill="hsl(0,100%,100%)"
        mask="url(#check)"
      >
        <path
          d="M0 0h512v512H0z"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> should render without a problem 1`] = `
.c0 {
  display: inline-block;
}

<svg
  aria-hidden="true"
  class="c0"
  focusable="false"
  height="20"
  role="img"
  viewBox="0 0 512 512"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <g>
    <path
      d="M426.667 192v-64c0-11.782-9.552-21.333-21.334-21.333h-42.666V128c0 11.782-9.552 21.333-21.334 21.333S320 139.783 320 128v-21.333H192V128c0 11.782-9.551 21.333-21.333 21.333-11.782 0-21.334-9.55-21.334-21.333v-21.333h-42.666c-11.782 0-21.334 9.55-21.334 21.333v64h341.334zm0 42.667H85.333v192c0 11.782 9.552 21.333 21.334 21.333h298.666c11.782 0 21.334-9.551 21.334-21.333v-192zM192 64h128V42.667c0-11.782 9.551-21.334 21.333-21.334 11.782 0 21.334 9.552 21.334 21.334V64h42.666c35.347 0 64 28.654 64 64v298.667c0 35.346-28.653 64-64 64H106.667c-35.347 0-64-28.654-64-64V128c0-35.346 28.653-64 64-64h42.666V42.667c0-11.782 9.552-21.334 21.334-21.334S192 30.885 192 42.667V64z"
      data-testid="icon-svg-path"
      fill="hsl(0,100%,100%)"
      fill-rule="evenodd"
    />
  </g>
</svg>
`;
